--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,11 +1,7 @@
----
----
-
-@import "{{ site.theme }}";
-
 .markdown-body {
   max-width: 800px;
   font-size: 16px;
+  margin: 0 auto;
 }
 
 .markdown-body p {
