--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -7,6 +7,9 @@ head
   meta(charset='utf-8')
   meta(name='viewport' content='width=device-width, initial-scale=1.0')
   title #{title}
-  link(rel='stylesheet' href='/assets/styles/index.css')
+  link(rel='stylesheet' href='/memo/assets/styles/index.css')
+  link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/prismjs@1.25.0/themes/prism-tomorrow.css')
+  script(src='https://cdn.jsdelivr.net/npm/prismjs@1.25.0/prism.min.js')
+  script(src='https://cdn.jsdelivr.net/npm/prismjs@1.25.0/plugins/autoloader/prism-autoloader.min.js')
 .markdown-body
   | !{content}
