--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -1,50 +1,36 @@
 ---
 title: Amar Memoranda
+layout: base
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/themes/prism-tomorrow.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css"/>
-    <link rel="stylesheet" href="/memo/assets/styles/index.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/prism.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/plugins/autoloader/prism-autoloader.min.js"></script>
-  </head>
-  <body>
-    {% if breadcrumbs and eleventyNavigation.key %}
-      <a class="crumb" href="{{ '/' | url }}">Root</a> &gt;
-      {% set crumbs = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key, { includeSelf: false }) %}
-      {% for crumb in crumbs %}
-        <a class="crumb" href="{{ crumb.url | url }}">{{ crumb.title }}</a> &gt;
-      {% endfor %}
-    {% endif %}
-    <div class="markdown-body">
-      <h1>{{ title }}</h1>
-      {% if article %}
-        <div class="article-details">
-          {{ date | formatDate }} &bull; <a href="{{ authorUrl | url }}">{{ author }}</a> &bull; {{ content | readingTime }} read
-        </div>
-      {% endif %}
-      {{ content | safe }}
-      {% if index %}
-        {% set children = collections.all | eleventyNavigation | extractChildren(eleventyNavigation.key) %}
-        {% for child in children %}
-          <div>
-            <h2>
-              <a href="{{ child.url | url }}">{{ child.title }}</a> 
-            </h2>
-            {% if child.description %}
-              <p style="margin-left: 1em;">
-                {{ child.description }}
-              </p>
-            {% endif %}
-          </div>
-        {% endfor %}
-      {% endif %}
+{% if breadcrumbs and eleventyNavigation.key %}
+  <a class="crumb" href="{{ '/' | url }}">Root</a> &gt;
+  {% set crumbs = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key, { includeSelf: false }) %}
+  {% for crumb in crumbs %}
+    <a class="crumb" href="{{ crumb.url | url }}">{{ crumb.title }}</a> &gt;
+  {% endfor %}
+{% endif %}
+<div class="markdown-body">
+  <h1>{{ title }}</h1>
+  {% if article %}
+    <div class="article-details">
+      {{ date | formatDate }} &bull; <a href="{{ authorUrl | url }}">{{ author }}</a> &bull; {{ content | readingTime }} read
     </div>
-  </body>
-</html>
+  {% endif %}
+  {{ content | safe }}
+  {% if index %}
+    {% set children = collections.all | eleventyNavigation | extractChildren(eleventyNavigation.key) %}
+    {% for child in children %}
+      <div>
+        <h2>
+          <a href="{{ child.url | url }}">{{ child.title }}</a> 
+        </h2>
+        {% if child.description %}
+          <p style="margin-left: 1em;">
+            {{ child.description }}
+          </p>
+        {% endif %}
+      </div>
+    {% endfor %}
+  {% endif %}
+</div>
