--- a/_includes/graph.njk
+++ b/_includes/graph.njk
@@ -81,10 +81,10 @@
 <script type="module">
   import * as d3 from "https://cdn.skypack.dev/d3@7";
 
-  const data = {{ collections.all | tree | safe }};
+  const data = {{ collections.all | tree(protected) | safe }};
 
   // Modified under ISC from https://observablehq.com/@d3/tree
-  const getLabel = (d, n) => d?.title || n.id.split('/').pop().replace(/-/g, ' ').replace(/./, c => c.toUpperCase());
+  const getLabel = (d, n) => /* d?.label || */ d?.title || n.id.split('/').pop().replace(/-/g, ' ').replace(/./, c => c.toUpperCase());
 
   const getLink = (d, n) => d?.url;
 
@@ -97,26 +97,30 @@
 
   // Compute the layout.
   // TODO: compute width based on sum of max title char length of each level
-  const width = 1500;
-  const dx = 20;
-  const dy = width / (root.height);
+  const dx = 30;
+  const dy = 300;
   d3.tree().nodeSize([dx, dy])(root);
 
   // Center the tree.
-  let x0 = Infinity;
-  let x1 = -x0;
+  let minY = Infinity;
+  let maxY = -minY;
+  let minX = Infinity;
+  let maxX = -minY;
   root.each(d => {
-    if (d.x > x1) x1 = d.x;
-    if (d.x < x0) x0 = d.x;
+    if (d.x > maxY) maxY = d.x;
+    if (d.x < minY) minY = d.x;
+    if (d.y > maxX) maxX = d.y;
+    if (d.y < minX) minX = d.y;
   });
 
-  // Compute the default height.
-  const height = x1 - x0 + dx * 2;
+  // Compute the default dims
+  const width  = maxX - minX;
+  const height = maxY - minY;
 
   const svg = d3.create("svg")
-      .attr("viewBox", [-dy + 220, x0 - dx, width + 550, height])
-      .attr("width", width)
-      .attr("height", height)
+      .attr("viewBox", [minX - 150, minY - dx, width + 2 * dy, height + 2 * dx])
+      .attr("width", width + 2 * dy)
+      .attr("height", height + 2 * dx)
       .attr("font-family", "sans-serif")
       .attr("font-size", 10);
 
