add: support for embedded notes

--- a/_layouts/base.njk
+++ b/_layouts/base.njk
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/themes/prism-tomorrow.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css"/>
     <link rel="stylesheet" href="/memo/assets/styles/index.css"/>
+    <script src="https://kit.fontawesome.com/a1b5a2aa60.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/prism.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.25.0/plugins/autoloader/prism-autoloader.min.js"></script>
   </head>
