--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -4,14 +4,20 @@ layout: base
 ---
 
 {% if breadcrumbs and eleventyNavigation.key %}
-  <a class="crumb" href="{{ '/' | url }}">Root</a> &gt;
-  {% set crumbs = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key, { includeSelf: false }) %}
-  {% for crumb in crumbs %}
-    <a class="crumb" href="{{ crumb.url | url }}">{{ crumb.title }}</a> &gt;
-  {% endfor %}
+  <div id="crumbs">
+    <a class="crumb" href="{{ '/' | url }}">Root</a> &gt;
+    {% set crumbs = collections.all | eleventyNavigationBreadcrumb(eleventyNavigation.key, { includeSelf: false }) %}
+    {% for crumb in crumbs %}
+      <a class="crumb" href="{{ crumb.url | url }}">{{ crumb.title }}</a> &gt;
+    {% endfor %}
+  </div>
+  <script>
+    if (window !== window.parent)
+      document.body.classList.add('iframe');
+  </script>
 {% endif %}
 <div class="markdown-body">
-  <h1>{{ title }}</h1>
+  <h1>{{ title }}<a class="title-link" href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a></h1>
   {% if article %}
     <div class="article-details">
       {{ date | formatDate }} &bull; <a href="{{ authorUrl | url }}">{{ author }}</a> &bull; {{ content | readingTime }} read
