--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -69,7 +69,7 @@ blockquote {
   opacity: 0.5;
 }
 
-iframe {
+.embedded-note {
   border: 1px solid var(--background-alt);
   box-shadow: 0px 0px 10px 0px #000;
   width: 100%;
