fix: secondary background colour

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -50,7 +50,7 @@ blockquote {
 
 :root {
   --background-body: #030c22;
-  --background: #030c22;
+  --background: #20293f;
   --background-alt: #20293f;
   --text-main: #a9b0b3;
   --text-bright: #fff;
