--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -75,6 +75,14 @@ blockquote {
   opacity: 0.5;
 }
 
+.footer {
+  margin-top: 4em;
+  font-size: small;
+  opacity: 0.5;
+  width: 100%;
+  text-align: center;
+}
+
 .embedded-note {
   border: 1px solid var(--background-alt);
   box-shadow: 0px 0px 10px 0px #000;
