--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -59,7 +59,7 @@ blockquote {
   --scrollbar-thumb-hover: #fff;
   --links: #e0d498;
   --focus: #e0d498;
-  --border: #e0d498;
+  --border: #a9b0b3;
   --code: #000;
   --button-hover: #a9b0b3;
 }
