add: tweak focus colour

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -58,7 +58,7 @@ blockquote {
   --scrollbar-thumb: #a9b0b3;
   --scrollbar-thumb-hover: #fff;
   --links: #e0d498;
-  --focus: #e0d498;
+  --focus: #a9b0b3;
   --border: #a9b0b3;
   --code: #000;
   --button-hover: #a9b0b3;
