add: refactor CSS and add new datavis

--- a/_includes/layoutToggle.njk
+++ b/_includes/layoutToggle.njk
@@ -60,7 +60,7 @@ input:checked + .slider:before {
   width: 100%;
   align-items: center;
   justify-content: center;
-  margin: 10px 0;
+  margin: 10px auto;
 }
 
 .switch-and-icons {
