--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,15 +1,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap');
 
+html {
+  min-height: 100%;
+  max-width: 100%;
+}
+
+body {
+  min-height: calc(100vh);
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+}
+
+body.iframe {
+  padding: 0 10px;
+}
+
 .markdown-body {
-  max-width: 800px;
+  flex-grow: 1;
   font-size: 16px;
-  margin: 0 auto;
+}
+
+.markdown-body>* {
+  box-sizing: border-box;
+  max-width: 800px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#crumbs {
+  width: 800px;
+  max-width: 800px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
 }
 
 .markdown-body p {
   font-size: 16px;
   line-height: 1.9em;
   margin-bottom: 1.2em;
+}
+
+.markdown-body pre {
+  background: var(--background);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.markdown-body pre code::-webkit-scrollbar-track {
+  background-color: var(--background-body);
+}
+
+.markdown-body iframe:not(.embedded-note) {
+  display: block;
 }
 
 .markdown-body li {
@@ -65,7 +111,7 @@ blockquote {
 }
 
 :not(pre)>code {
-  background: #2d2d2d;
+  background: var(--background);
   color: var(--text-main);
   border-radius: 0;
 }
@@ -77,6 +123,7 @@ blockquote {
 
 .footer {
   margin-top: 4em;
+  margin-bottom: 2em;
   font-size: small;
   opacity: 0.5;
   width: 100%;
@@ -93,4 +140,5 @@ blockquote {
   width: 100%;
   height: 20rem;
   padding-left: 1rem;
+  box-sizing: border-box;
 }
