fix: tree overflow-x auto

--- a/_includes/datavis.njk
+++ b/_includes/datavis.njk
@@ -7,7 +7,7 @@
   }
   #graph-wrapper.tree {
     display: block;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
   .spinner-wrapper {
     width: 100%;
