--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -18,7 +18,7 @@ layout: base
 {% endif %}
 <div class="markdown-body">
   <h1>{{ title }}<a class="title-link" href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a></h1>
-  {% if article %}
+  {% if article or post %}
     <div class="article-details">
       {{ date | formatDate }} &bull; <a href="{{ authorUrl | url }}">{{ author }}</a> &bull; {{ content | readingTime }} read
     </div>
@@ -31,18 +31,19 @@ layout: base
         <img class="hidden u-photo" src="/memo/assets/images/me.png" alt="Yousef Amar" />
       </noscript>
       <a class="hidden p-author h-card" href="{{ authorUrl | url }}">{{ author }}</a>
-      {% set children = collections.all | children(page.url) %}
+      {% set children = collections.all | children(page.url) | reverse %}
       {% for child in children %}
         <div class="h-entry">
-          <h2 class="p-name">
-            <a class="u-url" href="{{ child.url | url }}">{{ child.data.title }}</a> 
-          </h2>
+          <h2><span class="p-name">{{ child.data.title }}</span><a class="title-link u-url" href="{{ child.url | url }}"><i class="fa-solid fa-arrow-up-right-from-square"></i></a></h2>
           <time class="hidden dt-published" datetime="{{child.data.date}}">{{child.data.date}}</time>
           {% if child.data.content %}
-            <div style="margin-left: 1em;" class="e-content">
+            <div class="e-content">
               {{ child.templateContent | safe }}
             </div>
           {% endif %}
+          <div class="article-details">
+            {{ child.data.date | formatDate }}
+          </div>
         </div>
       {% endfor %}
   </section>
