--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -17,24 +17,41 @@ layout: base
   </script>
 {% endif %}
 <div class="markdown-body">
-  <h1>{{ title }}<a class="title-link" href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a></h1>
+  <h1>{{ title }}{% if collection %} <span style="opacity: 0.5">#{{collection}}</span>{% endif %}<a class="title-link" href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a><a class="header-link" href="https://granary.io/url?input=html&output=atom&url=https://amar.io{{ page.url | url }}" target="_blank"><i class="fa-solid fa-rss"></i></a></h1>
   {% if article or post %}
     <div class="article-details">
       {{ date | formatDate }} &bull; <a href="{{ authorUrl | url }}">{{ author }}</a> &bull; {{ content | readingTime }} read
     </div>
   {% endif %}
+  {% if feed %}
+    <div> 
+      {% for tag in collections | keys %}
+        {% if tag == collection %}
+          #{{tag}}
+        {% elif tag == 'all' %}
+          <a href="/memo/log/">#{{tag}}</a>
+        {% else %}
+          <a href="/memo/log/{{tag}}/">#{{tag}}</a>
+        {% endif %}
+      {% endfor %}
+    </div>
+  {% endif %}
   {{ content | safe }}
   {% if feed %}
     <section class="h-feed">
-      <h1 class="hidden p-name">Amar Memoranda > {{ title }}</h1>
+      <h1 class="hidden p-name">Amar Memoranda > {{ title }} ({{collection}})</h1>
       <noscript class="img">
         <img class="hidden u-photo" src="/memo/assets/images/me.png" alt="Yousef Amar" />
       </noscript>
       <a class="hidden p-author h-card" href="{{ authorUrl | url }}">{{ author }}</a>
-      {% set children = collections.all | children(page.url) | reverse %}
+      {% if collection == 'all' %}
+        {% set children = collections[collection] | children(page.url) | reverse %}
+      {% else %}
+        {% set children = collections[collection] | reverse %}
+      {% endif %}
       {% for child in children %}
         <div class="h-entry">
-          <h2><span class="p-name">{{ child.data.title }}</span><a class="title-link u-url" href="{{ child.url | url }}"><i class="fa-solid fa-arrow-up-right-from-square"></i></a></h2>
+          <h2><span class="p-name">{{ child.data.title }}</span><a class="header-link u-url" href="{{ child.url | url }}" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a></h2>
           <time class="hidden dt-published" datetime="{{child.data.date}}">{{child.data.date}}</time>
           {% if child.data.content %}
             <div class="e-content">
@@ -42,7 +59,7 @@ layout: base
             </div>
           {% endif %}
           <div class="article-details">
-            {{ child.data.date | formatDate }}
+            {{ child.data.date | formatDate }} &bull; {% for tag in child.data.tags %}<a href="/memo/log/{{tag}}/">#{{tag}}</a> {% endfor %}
           </div>
         </div>
       {% endfor %}
