--- a/root/yousefamar.njk
+++ b/root/yousefamar.njk
@@ -95,7 +95,7 @@ public: true
     </div>
   </div>
 </div>
-<div class="vignette fullscreen"></div>
+<div class="vignette fullscreen" style="height: 100vh;"></div>
 <script>
   const generateDots = (depth) => {
     const svg = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
@@ -179,8 +179,13 @@ public: true
   scene.add(light);
 
   function animation(time) {
-    mesh.rotation.x = window.parallax.inputY * 0.5;
-    mesh.rotation.y = window.parallax.inputX * 0.5;
+    if (window.parallax.orientationSupport) {
+      mesh.rotation.x = -Math.PI * 0.125 + window.parallax.inputX * 0.5;
+      mesh.rotation.y = window.parallax.inputY * 0.5;
+    } else {
+      mesh.rotation.x = window.parallax.inputY * 0.5;
+      mesh.rotation.y = window.parallax.inputX * 0.5;
+    }
     renderer.render(scene, camera);
   }
 
