--- a/root/yousefamar.njk
+++ b/root/yousefamar.njk
@@ -56,8 +56,6 @@ public: true
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css"/>
     <link rel="stylesheet" href="/memo/assets/styles/index.css"/>
 
-    <link rel="authorization_endpoint" href="https://indieauth.com/auth">
-    <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
     <link rel="webmention" href="https://webmention.io/yousefamar.com/webmention" />
     <link rel="pingback" href="https://webmention.io/yousefamar.com/xmlrpc" />
     <link rel="microsub" href="https://aperture.p3k.io/microsub/790">
@@ -137,15 +135,15 @@ public: true
 
   <body>
     <div class="h-card hcard vcard" style="display: none">
-      <img class="u-photo" src="/headshot-square.jpg" alt="A headshot of Yousef Amar" width="451" height="451" rel="me">
+      <img class="u-photo" src="/headshot-square.jpg" alt="A headshot of Yousef Amar" width="451" height="451">
       <span class="p-name">
         <span class="p-given-name">Yousef</span>
         <span class="p-family-name">Amar</span>
       </span>
       <span class="p-note">CTO and co-founder of Krew, PhD in networked systems</span>
-      <a class="u-url u-uid url uid url fn n" href="https://yousefamar.com" rel="me"></a>
-      <a class="u-email" href="mailto:yousef@amar.io">yousef@amar.io</a><br>
-      <a class="p-tel" href="tel:+447845443890" rel="me">+44 7845 443890</a>
+      <a class="u-url u-uid url uid url fn n" href="https://yousefamar.com"></a>
+      <a class="u-email" href="mailto:yousef@amar.io" rel="me">yousef@amar.io</a><br>
+      <a class="p-tel" href="tel:+447845443890">+44 7845 443890</a>
       <span class="p-job-title p-role">CTO</span>
       <a class="p-org" href="http://krew.live/" target="blank">Krew Live Ltd</a>
     </div>
